sumo/tests/duarouter/flows/errors/vehicle_empty_arrivalspeed/errors.duarouter
Error: Attribute 'arrivalSpeed' in definition of a flow is empty.
Error: The loader for flow-files from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid arrivalSpeed definition for vehicle 0;
 must be one of ("current", or a float>0).
Quitting (on error).
